# pantry

./: Cargo.toml  Rocket.toml
migrations/2022-01-11-200722_make_items/: up.sql
src/: ingredient.rs  item.rs  main.rs  measurement.rs  mongo.rs  recipe.rs  schema.rs
templates/: frameworks.html.hbs  header_test.html.hbs  index.html.hbs  item.html.hbs  navbar.html.hbs  recipe.html.hbs
