[package]
name = "pantry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features = ["postgres", "numeric"]}
dotenv = "0.15.0"
serde = {version = "1.0.131", features = ["derive"]}
serde_derive = "1.0.131"
bigdecimal = {version = "0.1.2", features = ["serde"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_sync_db_pools = {version = "0.1.0-rc.1", features = ["diesel_postgres_pool"]}
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["handlebars"]}
